gitops/apps/calibre/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre
  namespace: calibre
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/controller: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - calibre.apocalypso.xyz
      secretName: calibre-tls
  rules:
    - host: calibre.apocalypso.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calibre
                port:
                  number: 443
